--- a/components/globals/Loading/Spinner.css
+++ b/components/globals/Loading/Spinner.css
@@ -71,6 +71,10 @@
     width: calc(1.25 * calc(16px * 1));
     height: calc(1.25 * calc(16px * 1));
 }
+.rt-Spinner:where(.rt-r-size-4) {
+    width: calc(1.25 * calc(16px * 3));
+    height: calc(1.25 * calc(16px * 3));
+}
 @media (min-width: 520px) {
     .rt-Spinner:where(.xs\:rt-r-size-1) {
         width: calc(12px * 1);
@@ -83,6 +87,10 @@
     .rt-Spinner:where(.xs\:rt-r-size-3) {
         width: calc(1.25 * calc(16px * 1));
         height: calc(1.25 * calc(16px * 1));
+    }
+    .rt-Spinner:where(.xs\:rt-r-size-4) {
+        width: calc(1.25 * calc(16px * 3));
+        height: calc(1.25 * calc(16px * 3));
     }
 }
 @media (min-width: 768px) {
@@ -98,6 +106,10 @@
         width: calc(1.25 * calc(16px * 1));
         height: calc(1.25 * calc(16px * 1));
     }
+    .rt-Spinner:where(.sm\:rt-r-size-4) {
+        width: calc(1.25 * calc(16px * 3));
+        height: calc(1.25 * calc(16px * 3));
+    }
 }
 @media (min-width: 1024px) {
     .rt-Spinner:where(.md\:rt-r-size-1) {
@@ -111,6 +123,10 @@
     .rt-Spinner:where(.md\:rt-r-size-3) {
         width: calc(1.25 * calc(16px * 1));
         height: calc(1.25 * calc(16px * 1));
+    }
+    .rt-Spinner:where(.md\:rt-r-size-4) {
+        width: calc(1.25 * calc(16px * 3));
+        height: calc(1.25 * calc(16px * 3));
     }
 }
 @media (min-width: 1280px) {
@@ -126,6 +142,10 @@
         width: calc(1.25 * calc(16px * 1));
         height: calc(1.25 * calc(16px * 1));
     }
+    .rt-Spinner:where(.lg\:rt-r-size-4) {
+        width: calc(1.25 * calc(16px * 3));
+        height: calc(1.25 * calc(16px * 3));
+    }
 }
 @media (min-width: 1640px) {
     .rt-Spinner:where(.xl\:rt-r-size-1) {
@@ -139,5 +159,9 @@
     .rt-Spinner:where(.xl\:rt-r-size-3) {
         width: calc(1.25 * calc(16px * 1));
         height: calc(1.25 * calc(16px * 1));
+    }
+    .rt-Spinner:where(.xl\:rt-r-size-4) {
+        width: calc(1.25 * calc(16px * 3));
+        height: calc(1.25 * calc(16px * 3));
     }
 }
